--- a/rooms/roomballot/static/css/bootstrap.css
+++ b/rooms/roomballot/static/css/bootstrap.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 /*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -60,7 +62,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Lato', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -82,6 +84,7 @@ hr {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  font-family: 'Lato', sans-serif;
 }
 
 p {
@@ -361,7 +364,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
+  font-family: 'Lato', sans-serif;
   font-weight: 500;
   line-height: 1.2;
   color: inherit;
@@ -8991,4 +8994,16 @@ a.text-dark:hover, a.text-dark:focus {
 
 button.navbar-toggler:focus
 { outline: 1px none; }
+
+.ui-widget { font-family: "Lato", sans-serif; font-size: 1.1em; }
+    .ui-widget .ui-widget { font-size: 1em; width: auto}
+    .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: "Lato", sans-serif; font-size: 1em; }
+
+    td a {
+   display: block;
+   border: 1px solid black;
+   padding: 16px;
+}
+
+tr .cursor { cursor: pointer; }
 /*# sourceMappingURL=bootstrap.css.map */
