--- a/rooms/roomballot/templates/roomballot/room-manage.html
+++ b/rooms/roomballot/templates/roomballot/room-manage.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>{{ room }} | Downing JCR RBS</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
           media="all"/>
@@ -14,6 +13,7 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
 
@@ -116,7 +116,7 @@
                             <td><b>Occupied By</b></td>
                             <td>{{ room.taken_by }}
                                 {% if room.taken_by is not None %}
-                                    <br><a href="/roomballot/admin/manage-student/{{ room.taken_by.user_id }}" class="btn btn-primary">Manage</a>
+                                    <br><a href="/roomballot/admin/manage-student/{{ room.taken_by.user_id }}" class="btn btn-primary mt-2">Manage</a>
                                 {% endif %}</td>
                         </tr>
                         </tbody>
