--- a/rooms/roomballot/templates/roomballot/staircase-list.html
+++ b/rooms/roomballot/templates/roomballot/staircase-list.html
@@ -33,6 +33,13 @@
     </script>
     <!--End of Tawk.to Script-->
 </head>
+<script>
+    jQuery(document).ready(function($) {
+    $(".clickable-row").click(function() {
+        window.location = $(this).data("href");
+    });
+});
+</script>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark justify-content-between mb-4">
@@ -50,7 +57,8 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle d-none d-lg-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                <a class="nav-link dropdown-toggle d-none d-lg-block" href="#" id="navbarDropdown" role="button"
+                   data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     {{ student }}
                 </a>
@@ -60,16 +68,16 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/accounts/logout">Logout</a>
                 </div>
-                <li class="nav-item">
-                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/dashboard">Dashboard</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link active d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
-                </li>
-                <div class="dropdown-divider-burgundy"></div>
-                <li class="nav-item">
-                    <a class="nav-link d-lg-none d-xl-none" href="/accounts/logout">Logout</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-link d-lg-none d-xl-none" href="/roomballot/dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link active d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
+            </li>
+            <div class="dropdown-divider-burgundy"></div>
+            <li class="nav-item">
+                <a class="nav-link d-lg-none d-xl-none" href="/accounts/logout">Logout</a>
+            </li>
             </li>
         </ul>
     </div>
@@ -94,19 +102,16 @@
                     <th scope="col">Name</th>
                     <th scope="col" class="d-none d-sm-table-cell">Total Rooms</th>
                     <th scope="col">Available Rooms</th>
-                    <th scope="col"></th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for staircase in staircases %}
-                <tr>
-                    <td><b>{{ staircase.name }}</b></td>
-                    <td class="d-none d-sm-table-cell">{{ staircase.total_rooms }}</td>
-                    <td>{{ staircase.available_rooms }}</td>
-                    <td class="text-center">
-                        <a class="btn btn-primary" href="staircase/{{ staircase.staircase_id }}">View</a>
-                    </td>
-                </tr>
+                    <tr class="clickable-row" data-href="staircase/{{ staircase.staircase_id }}" style="cursor: pointer;">
+                        <td><b>{{ staircase.name }}</b></td>
+                        <td class="d-none d-sm-table-cell">{{ staircase.total_rooms }}</td>
+                        <td>{{ staircase.available_rooms }}</td>
+                    </tr>
+
                 {% endfor %}
                 </tbody>
             </table>
