--- a/rooms/roomballot/templates/roomballot/status.html
+++ b/rooms/roomballot/templates/roomballot/status.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Status | Downing JCR RBS</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
           media="all"/>
@@ -14,6 +13,7 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
 
@@ -42,7 +42,7 @@
             <div class="row">
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-1">
-                    <div class="ui-widget mb-3" id="student-search-widget">
+                    <div class="mb-3">
                         <table>
                             <tr>
                                 <td>
