Implemented concurrency safety, bugfixes & layout fixes

--- a/rooms/roomballot/templates/roomballot/create-review.html
+++ b/rooms/roomballot/templates/roomballot/create-review.html
@@ -95,9 +95,7 @@
                 the room below:
             </p>
             <div class="alert alert-info">
-                <div class="ml-3">
-                    <h4>{{ room }}</h4>
-                </div>
+                <h5>{{ room }}</h5>
             </div>
             <p>
                 If you are not the occupant of this room, please do not proceed with this survey. Instead, contact
@@ -157,8 +155,19 @@
 
         </div>
 
-        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mb-5">
+            <div class="d-md-block">
+            <div class="list-group">
+                <p class="list-group-item">
+                    <b>Review Guidance</b>
+                </p>
+                <p class="list-group-item">
+                    Include as much useful information about your room as possible. Think about what you wish you
+                    had known on ballot day! <br><br>Is the room noisy, cold or in poor condition? <br><br>What are the
+                    shared facilities (kitchen/bathroom) like?<br><br>Please don't use any offensive language in your
+                    review, or it will be removed from the system.
+                </p>
+            </div>
         </div>
 
 
@@ -167,12 +176,16 @@
 
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
+
 
 </body>
 </html>
