--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -95,6 +95,7 @@
                     <a href="room/{{ room.room_id }}" class="btn btn-primary mr-1">View Room</a>
                     {% if can_leave_review %}
                     <a href="/roomballot/dashboard/review" class="btn btn-primary mr-1">Leave Review</a>
+                        <div class="d-block d-sm-none mb-2"></div>
                     {% endif %}
                 {% else %}
                     {% if can_pick %}
