--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -172,7 +172,7 @@
         </div>
         {% if reviews %}
             <div class="col-md-12">
-                <div class="border-bottom mb-4"><h3>Reviews</h3></div>
+                <div class="border-bottom mb-4 mt-3"><h3>Reviews</h3></div>
                 {% for review in reviews %}
                     <div class="row mb-5">
                         <div class="col-md-4">
@@ -196,7 +196,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <p>Layout</p>
+                                    <h6>Layout</h6>
                                 </div>
                                 <div class="col-md-6 text-warning">
                                     {% if review.layout_rating == 1 %}
@@ -215,7 +215,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <p>Facilities</p>
+                                    <h6>Facilities</h6>
                                 </div>
                                 <div class="col-md-6 text-warning">
                                     {% if review.facilities_rating == 1 %}
