--- a/rooms/roomballot/templates/roomballot/staircase-list.html
+++ b/rooms/roomballot/templates/roomballot/staircase-list.html
@@ -116,6 +116,16 @@
                 </tbody>
             </table>
         </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mt-4 mb-4">
+            <div class="d-md-block">
+            <div class="list-group">
+                <p class="list-group-item"><b>Questions?</b></p>
+                <p class="list-group-item">
+                    If you're unsure about the ballot process, please consult the Knowledge Base.
+                </p>
+                <a class="list-group-item" href="/roomballot/info">Knowledge Base</a>
+            </div>
+        </div>
     </div>
 </div>
 
