Removed code to simplify syndicate input

--- a/rooms/roomballot/templates/roomballot/about.html
+++ b/rooms/roomballot/templates/roomballot/about.html
@@ -102,7 +102,7 @@
                         Licence, and the source is available on <a href="https://github.com/dowjcr/rooms" target="blank">GitHub</a>.
                         The backend uses the <a href="https://www.djangoproject.com/" target="blank">Django</a> framework, while the UI is simply
                         built using Bootstrap and a little jQuery.<br><br>
-                        <a href="https://cjoc.xyz">https://cjoc.xyz</a><br><br>
+                        <a href="https://cjoc.xyz" target="blank">https://cjoc.xyz</a><br><br>
                         If you have any feedback or suggestions about how the system can be improved, please feel free to contact the Internet Officer
                         at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.
                     </p>
