Layout changes, fixed add to syndicate method

--- a/rooms/roomballot/templates/roomballot/create-syndicate.html
+++ b/rooms/roomballot/templates/roomballot/create-syndicate.html
@@ -184,7 +184,7 @@
                 When you're done, click Create.
             </p>
             <div class="ui-widget mb-2">
-                <input id="student"><br>
+                <input id="student" style="width: 80%"><br>
             </div>
         </div>
 
