--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>{{ student.first_name }} {{ student.surname }} | Downing JCR RBS</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
           media="all"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
 </head>
 <body>
 
@@ -132,6 +135,12 @@
 
         });
 
+        $("modal-deallocate").modal({
+            escapeClose: false,
+            clickClose: false,
+            showClose: false
+        });
+
     });
 </script>
 
@@ -142,8 +151,19 @@
     </a>
 </nav>
 
-<div class="container-fluid">
+<div id="modal-deallocate" class="modal" role="dialog">
+    <p>Are you sure you want to deallocate {{ student.first_name }}'s room?</p>
+    <a href="#" rel="modal:close" class="btn btn-primary">Cancel</a>
+    <button class="btn btn-primary ml-2" id="deallocate-room">Confirm</button>
+</div>
 
+<div id="modal-remove-syndicate" class="modal" role="dialog">
+    <p>Are you sure you want to remove {{ student.first_name }} from the ballot?</p>
+    <a href="#" rel="modal:close" class="btn btn-primary">Cancel</a>
+    <button class="btn btn-primary ml-2" id="remove">Confirm</button><br>
+</div>
+
+<div class="container-fluid">
 
     <div class="row mt-4">
 
@@ -194,7 +214,8 @@
                                 <td>
                                     {{ student.syndicate_id }}
                                     {% if student.syndicate is not None %}
-                                        <br><a href="../syndicate/{{ student.syndicate_id }}" class="btn btn-primary mt-2">Manage</a>
+                                        <br>
+                                        <a href="../syndicate/{{ student.syndicate_id }}" class="btn btn-primary mt-2">Manage</a>
                                     {% endif %}
                                 </td>
                             </tr>
@@ -238,7 +259,7 @@
                     <div class="jumbotron">
                         <h3 class="border-bottom mb-3">Tasks</h3>
                         {% if student.in_ballot and not in_progress %}
-                            <button class="btn btn-primary mb-3" id="remove">Remove from Ballot</button><br>
+                            <a href="#modal-remove-syndicate" rel="modal:open" class="btn btn-primary mb-3">Remove from Ballot</a><br>
                             {% if student.syndicate is None %}
                                 <button class="btn btn-primary mb-3" id="add-to-syndicate">Add to Syndicate</button><br>
                                 <div class="ui-widget mb-2 alert alert-info mb-3" style="display: none"
@@ -248,14 +269,16 @@
                                 </div>
                             {% else %}
                                 {% if not student.accepted_syndicate %}
-                                    <button class="btn btn-primary mb-3" id="accept-syndicate">Accept Syndicate</button><br>
+                                    <button class="btn btn-primary mb-3" id="accept-syndicate">Accept Syndicate</button>
+                                    <br>
                                 {% endif %}
                             {% endif %}
                         {% elif not student.in_ballot and not in_progress %}
                             <button class="btn btn-primary mb-3" id="add-to-ballot">Add to Ballot</button><br>
                         {% endif %}
                         {% if student.has_allocated %}
-                            <button class="btn btn-primary mb-3" id="deallocate-room">Deallocate Room</button><br>
+                            <a href="#modal-deallocate" rel="modal:open" class="btn btn-primary mb-3">Deallocate
+                                Room</a><br>
                         {% else %}
                             <button class="btn btn-primary mb-3" id="allocate-room">Allocate Room</button><br>
                             <div class="ui-widget mb-2 alert alert-info mb-3" style="display: none"
