--- a/rooms/roomballot/templates/roomballot/syndicate-manage.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-manage.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Syndicate #{{ syndicate.syndicate_id }} | Downing JCR RBS</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
           media="all"/>
@@ -14,6 +13,9 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
 </head>
 <body>
 
@@ -77,6 +79,12 @@
         <p class="small">Administration Portal</p>
     </a>
 </nav>
+
+<div id="modal-dissolve" class="modal" role="dialog">
+    <p>Are you sure you want to dissolve this syndicate?</p>
+    <a href="#" rel="modal:close" class="btn btn-primary">Cancel</a>
+    <button class="btn btn-primary ml-2" id="dissolve-syndicate">Confirm</button>
+</div>
 
 <div class="container-fluid">
 
@@ -148,7 +156,7 @@
                     <div class="jumbotron">
                         <h3 class="mb-3">Tasks</h3>
                         {% if not in_progress %}
-                        <button class="btn btn-primary" id="dissolve-syndicate">Dissolve Syndicate</button>
+                        <a class="btn btn-primary" href="#modal-dissolve" rel="modal:open">Dissolve Syndicate</a>
                         {% endif %}
                     </div>
                 </div>
