--- a/rooms/roomballot/templates/roomballot/about.html
+++ b/rooms/roomballot/templates/roomballot/about.html
@@ -29,6 +29,7 @@
             s1.charset = 'UTF-8';
             s1.setAttribute('crossorigin', '*');
             s0.parentNode.insertBefore(s1, s0);
+            $("#header").load("nav-student.html");
         })();
     </script>
     <!--End of Tawk.to Script-->
