Tidying email templates and methods

--- a/rooms/roomballot/templates/roomballot/emails/review-confirmation.html
+++ b/rooms/roomballot/templates/roomballot/emails/review-confirmation.html
@@ -245,9 +245,7 @@ body,.wrapper{background-color:#7F0056}.wrapper h1{color:#557187;font-size:26px;
 <span style="color:#000000">
 Hi {{ student.first_name }},<br><br>
 
-Oh no! Unfortunately we've had to dissolve your syndicate. You might have requested this, or someone might have rejected
-    their invite. You can create a new syndicate
-    by visiting the Room Balloting System <a href="https://ballot.downingjcr.co.uk">here</a>. Sorry about that.<br><br>
+You wizard, you warlock! Thanks for leaving a review of your room - people like you make the world a better place.<br><br>
 
     Downing JCR &#10084;
 </span>
