--- a/rooms/roomballot/templates/roomballot/emails/review-room-reminder.html
+++ b/rooms/roomballot/templates/roomballot/emails/review-room-reminder.html
@@ -245,9 +245,12 @@ body,.wrapper{background-color:#7F0056}.wrapper h1{color:#557187;font-size:26px;
 <span style="color:#000000">
 Hi {{ student.first_name }},<br><br>
 
-Oh no! Unfortunately we've had to dissolve your syndicate. You might have requested this, or someone might have rejected
-    their invite. You can create a new syndicate
-    by visiting the Room Balloting System <a href="https://ballot.downingjcr.co.uk">here</a>. Sorry about that.<br><br>
+We sent you an email a little while ago asking you to review your room for the new Room Balloting System. When you get a
+    minute, we'd be grateful if you could leave a review, so others know what your room's like.<br><br>
+
+    <a href="https://ballot.downingjcr.co.uk">Review your Room!</a><br><br>
+
+    Thank you so much - we really appreciate your time!<br><br>
 
     Downing JCR &#10084;
 </span>
