--- a/rooms/roomballot/templates/roomballot/emails/room-selected.html
+++ b/rooms/roomballot/templates/roomballot/emails/room-selected.html
@@ -245,12 +245,10 @@ body,.wrapper{background-color:#7F0056}.wrapper h1{color:#557187;font-size:26px;
 <span style="color:#000000">
 Hi {{ student.first_name }},<br><br>
 
-Go you! You've successfully selected your room, <b>{{ room }}</b>. If you need to make any changes, simply drop the Internet Officer
+You wizard, you warlock! You've selected your new room, <b>{{ room }}</b>. If you need to make any changes, simply drop the Internet Officer
     a message through livechat, or an email at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.<br><br>
 
-    Best wishes,<br><br>
-
-    Downing JCR
+    Downing JCR &#10084;
 </span>
     </div>
 
