--- a/rooms/roomballot/templates/roomballot/emails/syndicate-complete.html
+++ b/rooms/roomballot/templates/roomballot/emails/syndicate-complete.html
@@ -245,9 +245,8 @@ body,.wrapper{background-color:#7F0056}.wrapper h1{color:#557187;font-size:26px;
 <span style="color:#000000">
 Hi {{ student.first_name }},<br><br>
 
-Oh no! Unfortunately we've had to dissolve your syndicate. You might have requested this, or someone might have rejected
-    their invite. You can create a new syndicate
-    by visiting the Room Balloting System <a href="https://ballot.downingjcr.co.uk">here</a>. Sorry about that.<br><br>
+Congrats! Your syndicate is now complete. If you need to make any changes, simply drop the Internet Officer
+    a message through livechat, or an email at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.<br><br>
 
     Downing JCR &#10084;
 </span>
