--- a/rooms/roomballot/templates/roomballot/emails/syndicate-invite.html
+++ b/rooms/roomballot/templates/roomballot/emails/syndicate-invite.html
@@ -245,9 +245,8 @@ body,.wrapper{background-color:#7F0056}.wrapper h1{color:#557187;font-size:26px;
 <span style="color:#000000">
 Hi {{ student.first_name }},<br><br>
 
-Oh no! Unfortunately we've had to dissolve your syndicate. You might have requested this, or someone might have rejected
-    their invite. You can create a new syndicate
-    by visiting the Room Balloting System <a href="https://ballot.downingjcr.co.uk">here</a>. Sorry about that.<br><br>
+You've been invited to a syndicate - isn't this exciting! Visit the Room Balloting System <a href="https://ballot.downingjcr.co.uk">here</a>
+    to respond to the invitation.<br><br>
 
     Downing JCR &#10084;
 </span>
