--- a/rooms/roomballot/templates/roomballot/about.html
+++ b/rooms/roomballot/templates/roomballot/about.html
@@ -4,6 +4,8 @@
 
 <head>
     <title>About | Downing JCR RBS</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+          integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 </head>
 
 <div class="container">
@@ -12,12 +14,12 @@
 
         <div class="col-md-3 col-sm-12 mb-4 d-md-block sidebar">
             <div class="list-group">
-                <a href="/roomballot/info" class="list-group-item"><i class="fa fa-key"></i> <span>Ballot Information</span></a>
-                <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Bursaries & Rent Reduction</span></a>
-                <a href="/roomballot/info/create-syndicate" class="list-group-item"><i class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
-                <a href="/roomballot/info/individual" class="list-group-item"><i class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
-                <a href="/roomballot/info/select-room" class="list-group-item"><i class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
-                <a href="/roomballot/about" class="list-group-item active"><i class="fa fa-question-circle"></i><span>About</span></a>
+                <a href="/roomballot/info" class="list-group-item"><span>Ballot Information</span></a>
+                <a href="#" class="list-group-item"><span>Bursaries & Rent Reduction</span></a>
+                <a href="/roomballot/info/create-syndicate" class="list-group-item"><span>Creating a Syndicate</span></a>
+                <a href="/roomballot/info/individual" class="list-group-item"><span>Ballot as an Individual</span></a>
+                <a href="/roomballot/info/select-room" class="list-group-item"><span>Selecting a Room</span></a>
+                <a href="/roomballot/about" class="list-group-item active"></i><span>About</span></a>
             </div>
         </div>
         <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4 mb-4">
@@ -27,7 +29,7 @@
                 </div>
                 <div class="border-top">
                     <p class="mt-3">
-                        This system was created with &#10084; by Cameron O'Connor, JCR Internet Officer 2018-19. It is released under the MIT
+                        This system was created with <i class="fas fa-heart"></i> by Cameron O'Connor, JCR Internet Officer 2018-19. It is released under the MIT
                         Licence, and the source is available on <a href="https://github.com/dowjcr/rooms" target="blank">GitHub</a>.
                         The backend uses the <a href="https://www.djangoproject.com/" target="blank">Django</a> framework, while the UI is simply
                         built using Bootstrap and a little jQuery.<br><br>
