--- a/rooms/roomballot/templates/roomballot/dashboard-admin.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-admin.html
@@ -14,6 +14,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
     <link rel="stylesheet" href={% static 'css/bootstrap.css' %}>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+          integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 </head>
 <body>
 
@@ -125,36 +127,35 @@
                         <h3 class="mb-3">Status</h3>
                         <div class="mb-3">
                             <table>
-                                <tr>
-                                    <td>
-                                        {% if syndicates_complete %}
-                                            Yes
-                                        {% else %}
-                                            No
-                                        {% endif %}
-                                    </td>
+                            <tr>
+                                {% if syndicates_complete %}
+                                    <td style="min-width: 25px"><i class="fas fa-check"></i></td>
                                     <td>First Year Syndicates Complete</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        {% if randomised %}
-                                            Yes
-                                        {% else %}
-                                            No
-                                        {% endif %}
-                                    </td>
+                                {% else %}
+                                    <td style="min-width: 25px"><i class="fas fa-times"></i></td>
+                                    <td>First Year Syndicates Incomplete</td>
+                                {% endif %}
+                            </tr>
+                            <tr>
+                                {% if randomised %}
+                                    <td><i class="fas fa-check"></i></td>
                                     <td>Randomised</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        {% if in_progress %}
-                                            Yes
-                                        {% else %}
-                                            No
-                                        {% endif %}</td>
+                                {% else %}
+                                    <td><i class="fas fa-times"></i></td>
+                                    <td>Not Randomised</td>
+                                {% endif %}
+
+                            </tr>
+                            <tr>
+                                {% if in_progress %}
+                                    <td><i class="fas fa-check"></i></td>
                                     <td>Ballot In Progress</td>
-                                </tr>
-                            </table>
+                                {% else %}
+                                    <td><i class="fas fa-times"></i></td>
+                                    <td>Ballot Not In Progress</td>
+                                {% endif %}
+                            </tr>
+                        </table>
                         </div>
                         <a href="/roomballot/admin/status" class="btn btn-primary">More Info</a>
                     </div>
