--- a/rooms/roomballot/templates/roomballot/landing.html
+++ b/rooms/roomballot/templates/roomballot/landing.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Downing JCR RBS</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+          integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
 </head>
 <body>
@@ -27,7 +29,7 @@
                 <h3>To continue, please login with Raven.</h3>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mt-3">
-                <a class="btn btn-lg btn-primary" style="color: white" href="/accounts/login">Raven login</a>
+                <a class="btn btn-lg btn-primary" style="color: white" href="/accounts/login">Raven login <i class="fas fa-angle-right ml-2"></i></a>
             </div>
         </div>
     </div>
